Upgrade docs to address security issues in dependencies for Sphinx.
Also add a Make command "build-docs" that quickly/easily builds the
docs using Docker for local testing/consumption.

Also modify a copyright in the conf.py file.

Also adjust to using Python v3.7.

Signed-off-by: Ben Smith <benjsmi@us.ibm.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 1.6
+minversion = 3.4
 envlist = docs
 skipsdist=true
 
@@ -9,3 +9,5 @@ commands =
     sphinx-build -b html -n -d {envtmpdir}/doctrees ./docs/source {toxinidir}/docs/_build/html
     echo "Generated docs available in {toxinidir}/docs/_build/html"
 whitelist_externals = echo
+basepython=python3.7
+ignore_basepython_conflict=True
